--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -9,8 +9,11 @@ gunicorn==19.3.0
 # Used to serve static files
 whitenoise==2.0
 
+# Used for testing
 django-nose==1.4
 mock==1.0.1
 nose==1.3.7
-
 selenium==2.44.0
+
+# Used to support memcached
+python-memcached==1.54
