modified settings to use alternate env besides PWS

--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -17,3 +17,7 @@ selenium==2.44.0
 
 # Used to support memcached
 python-memcached==1.54
+
+# Used for postgresql
+psycopg2==2.6.1
+dj-database-url==0.3.0
