--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -14,6 +14,8 @@ django-nose==1.4
 mock==1.0.1
 nose==1.3.7
 selenium==2.44.0
+coverage==3.7.1
+django-coverage==1.2.4
 
 # Used to support memcached
 python-memcached==1.54
